loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
var compt : Int = 0
^Poucet2:1: error: Missing closing brace `}' assumed here
var compt : Int = 0
^Poucet2:1: error: expected class or object definition
var compt : Int = 0
^Poucet2:4: error: expected class or object definition
while (!sortieTrouvee) {
^