loopdowhile.Poucet2.scala.code
var compt : Int = 0


while (!sortieTrouvee) {
  
  
  do {compt = 0
    
    avance()
    
    if (estSurBiscuit)
    
    
    {compt = compt + 1}
    
  
   if (compt >= 3) 
    {gauche()}
   
     else {droite()}
   
    
   
  
  while (!crossing())  
    
    
  
 

avance()